# rust-wasm

./: .gitignore  .vercelignore  Cargo.toml  README.md  build.sh  index.html
.well-known/: farcaster.json
server/: .gitignore  Cargo.toml  Dockerfile
server/src/: main.rs
src/: lib.rs
