[package]
name = "temty"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["WebSocket", "MessageEvent", "ErrorEvent", "console", "Window", "Document", "Element", "HtmlElement", "HtmlInputElement", "HtmlCanvasElement", "CanvasRenderingContext2d", "CanvasGradient", "ImageData", "MouseEvent", "DomRect", "WheelEvent", "Storage", "TouchEvent", "TouchList", "Touch", "Location", "Performance"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
